kubernetes/02-apps/homepage/ingress.yaml
# kubernetes/02-apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homelab
  labels:
    app.kubernetes.io/name: homepage
  # annotations: # Eliminada anotación kubernetes.io/ingress.class
spec:
  ingressClassName: traefik # Añadido/Corregido
  rules:
    - host: home.homelab.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage 
                port:
                  name: http # O number: 3000
